Fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 html, body, #root {
-    height: 100%;
+    min-height: 100%;
     background-color: #121212;
     display: flex;
     flex: 1 1 1px;
 }
-#root > header + * { padding-top: 5rem; height: 100% }
 a, a:active, a:visited { color: white; text-decoration: none }
 button.MuiButton-containedSuccess { color: #fff; }
